--- a/src/Huffman.Console/Supporting Files/Styles.css
+++ b/src/Huffman.Console/Supporting Files/Styles.css
@@ -4,6 +4,10 @@
     font-family: 'Google Sans', arial, verdana, tahoma;
 }
 
+body {
+    background-color: #e0e0e0;
+}
+
 .title {
     margin-top: 20px;
     font-size: 20px;
@@ -38,7 +42,7 @@
     position: absolute;
     top: 0;
     right: 50%;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #fff;
     width: 50%;
     height: 20px;
 }
@@ -46,7 +50,7 @@
 .tree li::after {
     right: auto;
     left: 50%;
-    border-left: 1px solid #ccc;
+    border-left: 1px solid #fff;
 }
 
 .tree li:only-child::after, .tree li:only-child::before { display: none; }
@@ -56,7 +60,7 @@
 .tree li:first-child::before, .tree li:last-child::after { border: 0 none; }
 
 .tree li:last-child::before {
-    border-right: 1px solid #ccc;
+    border-right: 1px solid #fff;
     border-radius: 0 5px 0 0;
     -webkit-border-radius: 0 5px 0 0;
     -moz-border-radius: 0 5px 0 0;
@@ -73,12 +77,13 @@
     position: absolute;
     top: 0;
     left: 50%;
-    border-left: 1px solid #ccc;
+    border-left: 1px solid #fff;
     width: 0;
     height: 20px;
 }
 
 .tree li a {
+    background-color: #ffffff;
     border: 1px solid #ccc;
     padding: 5px 10px;
     text-decoration: none;
@@ -105,7 +110,7 @@
 .tree li a:hover + ul ul::before { border-color: #94a0b4; }
 
 .leaf {
-    background-color: #b0d0b0;
+    background-color: #b0d0b0 !important;
 }
 
 .character {
