--- a/src/Huffman.Console/Supporting Files/Styles.css
+++ b/src/Huffman.Console/Supporting Files/Styles.css
@@ -6,6 +6,13 @@
 
 body {
     background-color: #e0e0e0;
+    cursor: all-scroll;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .title {
