--- a/src/Huffman.Console/Supporting Files/Styles.css
+++ b/src/Huffman.Console/Supporting Files/Styles.css
@@ -116,8 +116,8 @@ body {
 .tree li a:hover + ul::before,
 .tree li a:hover + ul ul::before { border-color: #94a0b4; }
 
-.leaf {
-    background-color: #b0d0b0 !important;
+.tree li a.leaf {
+    background-color: #b0d0b0;
 }
 
 .character {
