--- a/src/Huffman.Console/Supporting Files/Styles.css
+++ b/src/Huffman.Console/Supporting Files/Styles.css
@@ -123,3 +123,24 @@ body {
 .character {
     font-size: 20px;
 }
+
+.tooltip:before {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    transform: translateY(-50%);
+    left: -20%;
+    margin-left: 15px;
+    padding: 10px;
+    border-radius: 10px;
+    background: #000;
+    color: #fff;
+    text-align: center;
+    display: none;
+    z-index: 1;
+    font-family: 'Lucida Console', monospace;
+}
+
+.tooltip:hover:before {
+    display: block;
+}
