--- a/src/Huffman.Console/Supporting Files/Styles.css
+++ b/src/Huffman.Console/Supporting Files/Styles.css
@@ -129,9 +129,9 @@ body {
     position: absolute;
     top: 0;
     transform: translateY(-50%);
-    left: -20%;
-    margin-left: 15px;
+    text-align: center;
     padding: 10px;
+    left: -71px;
     border-radius: 10px;
     background: #000;
     color: #fff;
@@ -139,6 +139,7 @@ body {
     display: none;
     z-index: 1;
     font-family: 'Lucida Console', monospace;
+    width: 180px;
 }
 
 .tooltip:hover:before {
